Bug 216721 Make mAttachedQueue a Stack r=bryner sr=bz